# td-free

./: .gitignore  API.md  Cargo.toml  README.md  build.rs  cfg.toml  partitions.csv  platformio.ini  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build.yml  platformio_build.yml  release-data.json  release.yml
KiCad/: .gitignore  fp-info-cache  freerouting.dsn  td-free.csv  td-free.kicad_pcb  td-free.kicad_prl  td-free.kicad_pro  td-free.kicad_sch  temp-freerouting.dsn  ~td-free.kicad_pcb.lck
KiCad/bom/: ibom.html
KiCad/database/: project.db
firmware/: .clippy.toml  .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  tree.txt
firmware/src/: lib.rs
firmware/src/helpers/: bitbang_i2c.rs  calibration.rs  median_buffer.rs  mod.rs  v33.rs  v77.rs  veml3328.rs
firmware/src/helpers/storage/: implementation.rs  mod.rs  nvs.rs
firmware/src/tasks/: leds.rs  mod.rs  sensors.rs  serial.rs  states.rs
firmware/src/tasks/http/: config.rs  frontend.rs  mod.rs  network.rs  sse.rs
firmware/src/tasks/http/frontend/: index.html  mod.rs  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
firmware/src/tasks/http/frontend/src/: api.ts  helpers.ts  index.tsx  polling.ts
firmware/src/tasks/http/frontend/src/components/: Button.tsx  ButtonLink.tsx  Card.tsx  ColorPicker.tsx  ColorSwatch.tsx  ConfidenceBar.tsx  Navbar.tsx
firmware/src/tasks/http/frontend/src/pages/: Calibrate.tsx  Dashboard.tsx  Restarting.tsx  Settings.tsx  Wifi.tsx  types.ts
lib/Lux/: Lux.cpp  Lux.h
py_td1/: main.py
src/: algorithm_setup.html  calibration_optimizer.rs  dns.rs  helpers.rs  index.html  main.cpp  main.rs  median_buffer.rs  routes.rs  script.js  settings.html  style.css  update_page.html  wifi.rs  wifi_setup.html
src/helpers/: auto_calibrate.rs  baseline_readings.rs  bitbang_i2c.rs  i2c_init.rs  median_buffer.rs  mod.rs  nvs.rs  readings.rs  rgb.rs  serial.rs
src/helpers/bluetooth/: calib.rs  command.rs  mod.rs  server.rs  version.rs
src/html/: index.html
src/led/: mod.rs
src/routes/: config.rs  mod.rs  rgb.rs  serve.rs
src/routes/static/: index.html  script.js  settings.html  style.css  wifi_setup.html
src/routes/static/calibrate/: index.html  script.js
src/veml3328/: device_impl.rs  mod.rs
