[package]
name = "td-free-rs"
version = "0.1.0"
authors = ["Mawoka <git@mawoka.eu>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "td-free-rs"
harness = false     # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"
lto = true
strip = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features= ["experimental", "embassy-time-driver", "critical-section"] }
embedded-hal = "1"
heapless = "0.8"
edge-http = "0.5.1"
edge-captive = "0.5"
edge-nal = "0.5"
edge-ws = "0.4"
edge-nal-std = { version = "0.5", features = ["async-io-mini"] }
embedded-io-async = "0.6"
anyhow = "1"
url = "2.5"
veml7700 = "0.2.0"
embassy-time = { version = "0.4", features = ["log", "generic-queue-8"] }
embassy-futures = "0.1"
async-std = {version = "1.13"}
smart-leds = "*"
ws2812-esp32-rmt-driver = { version = "*", features = ["smart-leds-trait"] }

[build-dependencies]
embuild = {version = "0.33", features = ["espidf"]}
vergen-gix = { version = "1", features = ["build", "rustc"] }
anyhow = "1"

# [package.metadata.espflash]
# partition_table = "partitions.csv"
